--- a/css/main.css
+++ b/css/main.css
@@ -962,7 +962,7 @@ header .social-links ul li a:focus {
  *
  * ------------------------------------------------------------------- */
 #home {
-	background: #020507;
+	background: #ffbf00;
 	width: 100%;
 	height: 100%;
 	min-height: 800px;
